--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "0.0.1",
   "main": "index.js",
   "scripts": {
-    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent"
+    "test": "cross-env NODE_ENV=testing jest --verbose --runInBand --silent",
+    "start": "node index.js",
+    "server": "nodemon index.js",
+    "migrate": "knex migrate:latest",
+    "rollback": "knex migrate:rollback",
+    "test:migrate": "cross-env NODE_ENV=testing knex migrate:latest"
   },
   "repository": {
     "type": "git",
@@ -17,6 +22,16 @@
     "supertest": "6.2.3"
   },
   "dependencies": {
-    "sqlite3": "^5.0.8"
-  }
+    "sqlite3": "^5.0.8",
+    "express": "^4.17.1",
+    "knex": "^0.95.14",
+    "nodemon": "^2.0.15"
+  },
+  "description": "## Tools",
+  "bugs": {
+    "url": "https://github.com/BloomInstituteOfTechnology/web-sprint-challenge-adding-data-persistence/issues"
+  },
+  "homepage": "https://github.com/BloomInstituteOfTechnology/web-sprint-challenge-adding-data-persistence#readme",
+  "keywords": [],
+  "author": ""
 }
